# qmk_firmware

./: .gitignore  common_features.mk  readme.md
.github/workflows/: docs.yml
builddefs/: common_features.mk
data/mappings/: defaults.hjson
data/schemas/: keyboard.jsonschema
docs/: compatible_microcontrollers.md  flashing.md  index.md  newbs_getting_started.md  support.md
docs/drivers/: sled1734x.md  sn32f2xx.md
docs/features/: rgb_matrix.md
drivers/bluetooth/: iton.c  iton.h  iton_bt.c  iton_bt.h  outputselect.c
drivers/led/: apa102.c  sn32f2xx.c  sn32f2xx.h
drivers/led/sn32/: rgb_matrix_sn32f24xb.c  rgb_matrix_sn32f2xx.c  sn32f24xb.h  sn32f2xx.h
keyboards/czc/dwarf/: config.h  info.json  keyboard.json
keyboards/designedbygg/berserker/: config.h  info.json  keyboard.json
keyboards/designedbygg/redblade/: config.h  info.json  keyboard.json
keyboards/flesports/fl980/: config.h  info.json  keyboard.json
keyboards/hyperx/alloy_origins_core/: alloy_origins_core.c  config.h  keyboard.json  mcuconf.h  readme.md
keyboards/ozone/tactical/: config.h  keyboard.json
keyboards/redragon/k556/: config.h  keyboard.json
keyboards/redragon/k582/: config.h  keyboard.json
keyboards/redragon/k630/: config.h  keyboard.json
keyboards/royal_kludge/rk61_rgb/: config.h  (+2 more)
qmkeymap/: Cargo.toml  Makefile  build.rs
qmkeymap/src/: bindings.rs  keycodes.rs  keymap.rs  lib.rs  macros.rs
quantum/: matrix.c  matrix.h  quantum_keycodes.h
quantum/rgb_matrix/: rgb_matrix_drivers.c  rgb_matrix_drivers.h
tmk_core/: rules.mk
util/install/: linux_shared.sh  macos.sh
(+91 files in other folders)
